@@ -1966,10 +1966,10 @@ int determine_umask(
 
 int use_cpusets(
 
-							 job *pjob)	/* I */
+  job *pjob)	/* I */
 
-{
-	#ifdef GEOMETRY_REQUESTS
+  {
+#ifdef GEOMETRY_REQUESTS
 	resource     *presc;
 	resource_def *prd;
 
@@ -1984,12 +1984,13 @@ int use_cpusets(
 			(presc->rs_value.at_flags & ATR_VFLAG_SET) == FALSE)
 		{
 		return(FALSE);
-		} else
+		} 
+  else
 		return(TRUE);
-	#else
+#else
 	return(TRUE);
-	#endif /* GEOMETRY_REQUESTS */
-}	/* END use_cpusets() */
+#endif /* GEOMETRY_REQUESTS */
+  }	/* END use_cpusets() */
 #endif /* PENABLE_LINUX26_CPUSETS */
 
 
@@ -2210,7 +2211,9 @@ int TMomFinalizeChild(
 
 #ifdef PENABLE_LINUX26_CPUSETS
 
+#ifndef ALWAYS_USE_CPUSETS
 	if (use_cpusets(pjob) == TRUE)
+#endif /* ALWAYS_USE_CPUSETS */
 		{
 		sprintf(log_buffer, "about to create cpuset for job %s.\n",
 						pjob->ji_qs.ji_jobid);
